@@ -1,6 +1,6 @@
-e8c68ecdec29dad4d3dd4c57644e7ced *DESCRIPTION
+b3fa177c7a488aac5e7062eb0e8dcef0 *DESCRIPTION
 89f20d5fadf333e89ca17d05a87b306e *NAMESPACE
-609c27219b993fdad9a7ae8a303fb1b5 *NEWS
+e0f7ce3d0f9dd0b994791dd633c3305d *NEWS
 90becd47207ecf5ea48550ed8e59d42c *R/amod.R
 2c10ea2d72a76d0449359815414794bc *R/anova.modelFrame.R
 d585dcb836dccbd621da42477e4dac5f *R/arguSelect.R
@@ -18,12 +18,12 @@ c4acf5c6246db62f0f446a70af49e9bd *R/plot.wlai.R
 e7bc306c253a4311df80c2cb9a2361a3 *R/ringApply.R
 1a0f294543afca56e517e47255f5dd09 *R/rtimes.R
 e13e50412040f0ff6434283e4f271d5c *R/scacum.R
-20bfb687d838db3b95e3c4a25c2b46f5 *R/shiftFrame.R
+72898ee82aeaad03aed17d47da62e19f *R/shiftFrame.R
 f5b773820d64a08fd68f7c873b6e1b58 *R/slitFrame.R
 0abeca8a66dad3b8e1900b122f674dc5 *R/summary.modelFrame.R
 92cb9997717994e64f354b24901a4d71 *R/tdForm.R
 c27ab260b3d8285460bd0aa3dfaced1e *R/wlai.R
-f17efc11e3707c08ca02fe2322f0681f *build/partial.rdb
+9460e128e9dfa170bd54baa70635581b *build/partial.rdb
 4aba57b8c993bacef121f46c87b0bf15 *data/PTclim05.RData
 42e55584d0ab17866425eca9172571d5 *data/Pchron.RData
 e7f5c14c0f48b284bfd522473904c43c *data/Pradii03.RData
