@@ -1,3 +1,8 @@
+New change in BIOdry V0.8:
+
+Changes in "shiftFrame": We have used stringAsFactors = TRUE in 
+internal implementation of data.frame().
+
 New changes in BIOdry V0.7:
 convergence errors have been fixed
 
